Wed Oct 13 14:36:47 2004  Iliyan Jeliazkov  <jeliazkov_i@ociweb.com>

        * orbsvcs/orbsvcs/Shutdown_Utilities.cpp:
          Replaced an ad-hoc maximum signal number value with the NSIG
          define from signal.h.

Wed Oct 13 10:00:55 2004  Chris Cleeland  <cleeland_c@ociweb.com>

        * tests/Portable_Interceptors/Collocated/Service_Context_Manipulation/run_test.pl:
          This test will not work until a feature gets added to TAO.  But
          it's a pain to have to remember this all the time.  Therefore, I
          added an informational message to be printed by run_test.pl so
          that anybody who looks at the detailed output of the test will
          learn why it fails and, more importantly, why nobody should
          expect it to work for awhile.

Wed Oct 13 11:18:34 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * performance-tests/Protocols/sender.cpp:

          Fixed a nagging compiiler error in Win32 platforms.

Wed Oct 13 07:08:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/RTPortableServer/RT_Acceptor_Filters.h:
          Removed msvc specific pragma push/pop, not needed in this file

Tue Oct 12 20:10:06 MST 2004  Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImplRepo_Service.mpc:
          ImR_Locator_IDL project changed to not be built when
          the ImR_Activator_IDL prerequisites are not built.

Tue Oct 12 08:19:57 2004  Olli Savia  <ops@iki.fi>

        * tests/Typedef_String_Array/server.cpp:
          Added #include "ace/OS_NS_stdio.h" to pick ACE_OS::fopen() etc.

Mon Oct 11 18:31:10 2004  Irfan Pyarali  <irfan@oomworks.com>

        * examples/PluggableUDP/DIOP/README:

          Forgot to change TAO_TAG_UDP_PROFILE to TAO_TAG_DIOP_PROFILE in
          this file.

Mon Oct 11 17:46:48 2004  Irfan Pyarali  <irfan@oomworks.com>

        * tao/ORB_Constants.h:
        * CIAO/performance-tests/Protocols/Controller/Controller.cpp: